[gd_scene load_steps=20 format=3 uid="uid://dqks83s787sgm"]

[ext_resource type="Script" uid="uid://c1fqy7fpgejn5" path="res://game_objects/units/scripts/player.gd" id="1_6cl77"]
[ext_resource type="Script" uid="uid://b2cnacw0lfp3t" path="res://game_objects/units/scripts/health.gd" id="2_5g656"]
[ext_resource type="Resource" uid="uid://xvd5xbhhbx6l" path="res://game_objects/projectiles/Resources/auto_cannon_resource.tres" id="4_chqt7"]
[ext_resource type="Texture2D" uid="uid://cn0wccfyk6g81" path="res://game_objects/units/assets/Main Ship - Base - Full health 64.png" id="4_dxhcm"]
[ext_resource type="Texture2D" uid="uid://bntbma8eso7x8" path="res://game_objects/units/assets/Main Ship - Destruction.png" id="5_6x5ac"]
[ext_resource type="Script" uid="uid://iufwrgfw5nx3" path="res://game_objects/projectiles/Scripts/player_shooter.gd" id="6_b083e"]
[ext_resource type="Script" uid="uid://78hrs141avsx" path="res://game_objects/units/assets/unit_animated_sprite_2d.gd" id="6_h8fsg"]
[ext_resource type="Script" uid="uid://cskhe05pl6fvh" path="res://game_objects/projectiles/Assets/charger_display.gd" id="8_ln6o5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8gd2v"]
atlas = ExtResource("5_6x5ac")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_chg86"]
atlas = ExtResource("5_6x5ac")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rt15y"]
atlas = ExtResource("5_6x5ac")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p3nwn"]
atlas = ExtResource("5_6x5ac")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hpcla"]
atlas = ExtResource("5_6x5ac")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x27lt"]
atlas = ExtResource("5_6x5ac")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_upn82"]
atlas = ExtResource("5_6x5ac")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yyrty"]
atlas = ExtResource("5_6x5ac")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o6kxy"]
atlas = ExtResource("5_6x5ac")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uv5tj"]
atlas = ExtResource("5_6x5ac")
region = Rect2(640, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_ur1d7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_dxhcm")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gd2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_chg86")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rt15y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p3nwn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hpcla")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x27lt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_upn82")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yyrty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o6kxy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uv5tj")
}],
"loop": false,
"name": &"die",
"speed": 15.0
}]

[node name="Player" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_6cl77")
speed = 500.0

[node name="Health" type="Node" parent="."]
script = ExtResource("2_5g656")
max_health = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.43, 1.43)
sprite_frames = SubResource("SpriteFrames_ur1d7")
script = ExtResource("6_h8fsg")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
scale = Vector2(2, 2)
polygon = PackedVector2Array(-3, 13, 3, 13, 3, 11, 14, 11, 14, 6, 5, -3, 0, -13, -5, -3, -14, 5, -14, 11, -3, 11, -3, 13)

[node name="PlayerShooter" type="Node2D" parent="."]
script = ExtResource("6_b083e")
projectile_resource = ExtResource("4_chqt7")
fire_rate = 0.05
charger_capacity = 6
reload_time = 0.4

[node name="Container" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -30.67
offset_top = 22.095
offset_right = -30.67
offset_bottom = 22.095

[node name="ChargerDisplay" type="VBoxContainer" parent="Container" node_paths=PackedStringArray("player_shooter")]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 0
alignment = 2
script = ExtResource("8_ln6o5")
player_shooter = NodePath("../../PlayerShooter")

[connection signal="died" from="Health" to="." method="_on_health_died"]
[connection signal="died" from="Health" to="AnimatedSprite2D" method="_on_health_died"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="projectile_in_charger_changed" from="PlayerShooter" to="Container/ChargerDisplay" method="_on_player_shooter_projectile_in_charger_changed"]
[connection signal="projectile_shot" from="PlayerShooter" to="." method="_on_shooter_projectile_shot"]
